--- a/MAIN PAGE/hero-screen/index.html
+++ b/MAIN PAGE/hero-screen/index.html
@@ -5,9 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <header>
-      <section></section>
-    </header>
-  </body>
+  <body></body>
 </html>
