--- a/MAIN PAGE/hero-screen/index.html
+++ b/MAIN PAGE/hero-screen/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <header>
-      <section></section>
+      <section>
+        <nav><p>homepage</p></nav>
+      </section>
     </header>
   </body>
 </html>
